# jasper

./: .env.example  CI_CD_RESOLUTION.md  LICENSE  README.md  RELEASE_v0.1.0.md  UPDATE_SUMMARY.md  VERSION_0.2.0.md  main.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
agent/: entity_extractor.py  executor.py  planner.py  synthesizer.py  validator.py
cli/: main.py
config/: Dockerfile  jasper.spec
core/: config.py  controller.py  state.py
docs/: ARCHITECTURE.md  TEST_REPORT_v1.0.0.md  TROUBLESHOOTING.md  VERSION_1.0.0.md  VERSION_1.0.3.md
jasper/agent/: executor.py  planner.py  synthesizer.py  validator.py
jasper/cli/: main.py
jasper/core/: config.py  controller.py  errors.py  llm.py  state.py
jasper/export/: pdf.py
jasper/observability/: logger.py
jasper/styles/: report_v1.css
jasper/templates/: report.html.jinja
jasper/tools/: exceptions.py  financials.py
jasper_finance.egg-info/: PKG-INFO
observability/: logger.py
scripts/: build.ps1  build.sh
tests/: __init__.py  smoke_test.py  test_pdf_export.py  test_v0_1_0.py
tools/: financials.py
tools/providers/: alpha_vantage.py
